<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleCalendar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="default_name">default</string>
    <string name="title_activity_detail">Activity Detail</string>
    <string name="title_add_activity">Add Activity</string>
    <string name="title_main_activity">Calendar Events</string>
    <string name="Title">Title</string>
    <string name="Location">Location</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Description">Description</string>
    <string name="undefined">undefined</string>
    <string name="add">Add</string>

    <!-- for login -->
    <string name="uname">Username</string>
    <string name="upwd">Password</string>
    <string name="login_text">Login</string>
    <string name="rights_text">©zouliping</string>

</resources>